--- a/public/styles.css
+++ b/public/styles.css
@@ -40,3 +40,17 @@ body {
     display: table;
     clear: both;
   }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+  #marseeyslogo{
+    height:auto;
+    width:30%;
+  }
+
+  
