August 1 Dashboard POS Progress

--- a/public/styles.css
+++ b/public/styles.css
@@ -53,4 +53,17 @@ body {
     width:30%;
   }
 
+
+
+  /* for sidebar size */
+
+
+    /* .MuiDrawer-paper {
+ width: 94% !important;
+ } */
+
+
+
+
+
   
