Dashboard long fix incre button and more Aug 11 2022

--- a/public/styles.css
+++ b/public/styles.css
@@ -136,6 +136,58 @@ body {
 
   }
 
+
+    .orderNumberSide{
+     color:#FFFFFF;
+    font-size: 30px;
+    font-family: 'Barlow Condensed', sans-serif;
+    text-align: left;
+    margin-top: 2px;
+
+  }
+
+  .itemNameTag{
+     color:#FFFFFF;
+    font-size: 20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    text-align: left;
+    margin-top: 25px;
+    margin-left: 25px;
+    
+  }
+
+   .qtyTag{
+     color:#FFFFFF;
+    font-size: 20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    text-align: left;
+     margin-top: -50px;
+    margin-left: 320px;
+    
+  }
+
+    .deliveryTag{
+     color:#FFFFFF;
+    font-size: 20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    text-align: left;
+    margin-top: -50px;
+    margin-left: 430px;
+    
+  }
+
+  .orderItemStack{
+      color:#FFFFFF;
+    font-size: 20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 25px;
+
+  }
+
+
+
  
 
 
@@ -153,6 +205,118 @@ body {
      .MuiDrawer-list {
  width: 50% !important;
  } */
+
+ 
+ /* INCRE DECRE CSS: */
+ /* .center_div {
+  width: 50px;
+  height: 10px;
+  background-color: #252836;
+  border-radius: 5%;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 80px;
+} */
+
+.counterResult {
+  color: white;
+  background: transparent;
+  width: 14%;
+  height: 50px;
+  background-color: #252836;
+  /* padding: 10px 0 2px 0; */
+  /* padding: 10px; */
+  /* margin-bottom: 10px; */
+  text-align: center;
+  margin-top: -50px;
+  margin-left: 302px;
+   font-family: 'Barlow Condensed', sans-serif;
+}
+
+
+
+/* .buttonFunction:hover {
+  background-color: #d33131;
+}
+
+
+
+.buttonFunction2:hover {
+  background-color: #55ce6b;
+} */
+
+/* .btn_div {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+} */
+
+.todo_style {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+
+.initialPriceTag{
+    color:#FFFFFF;
+    font-size: 15px;
+    font-family: 'Barlow Condensed', sans-serif;
+    margin-top: -36px;
+    margin-left: 415px;
+
+}
+
+.menuPriceTag{
+    color:#FFFFFF;
+    font-size: 15px;
+    font-family: 'Barlow Condensed', sans-serif;
+    margin-top: -22px;
+    margin-left: 26px;
+  
+}
+
+
+.inputRounded .MuiOutlinedInput-root {
+  border-radius: 13px;
+  border-color: 'red';
+  color:white;
+  background-color: #252836;
+}
+
+.inputRounded  .Mui-focused{
+  color:white;
+}
+
+.inputRounded .MuiOutlinedInput-notchedOutline{
+  border-color:#504C64;
+}
+
+
+
+
+
+/* '& label.Mui-focused': {
+      color: 'green',
+    },
+    '& .MuiInput-underline:after': {
+      borderBottomColor: 'green',
+    },
+    '& .MuiOutlinedInput-root': {
+      '& fieldset': {
+        borderColor: 'red',
+      },
+      '&:hover fieldset': {
+        borderColor: 'yellow',
+      },
+      '&.Mui-focused fieldset': {
+        borderColor: 'green',
+      }, */
+
 
 
 
