--- a/public/styles.css
+++ b/public/styles.css
@@ -53,54 +53,60 @@ body {
   #marseeyslogo{
     height:auto;
     width:30%;
+    
   }
 
   #marseeysicon{
      height:auto;
     width:60%;
-    margin-left: 25px;
+    margin-left: 30px;
     margin-top: 20px;
-     margin-bottom: 20px;
+    margin-bottom: 20px;
     
   }
 
   #orderIcon{
     height:auto;
-    width:60%;
-    margin-left: -32px;
-      margin-bottom: 20px;
+    width:52%;
+    margin-left: -23px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
 
     #pendingIcon{
     height:auto;
-    width:70%;
-    margin-left: -35px;
-      margin-bottom: 20px;
+    width:65%;
+    margin-left: -29px;
+    margin-bottom: 20px;
+    margin-top: 20px;
   
   }
 
       #draftIcon{
     height:auto;
-    width:55%;
-    margin-left: -28px;
-      margin-bottom: 20px;
+    width:50%;
+    margin-left: -21px;
+    margin-bottom: 20px;
+    margin-top: 20px;
   
   }
 
      #historyIcon{
     height:auto;
-    width:68%;
-    margin-left: -33px;
-      margin-bottom: 20px;
+    width:65%;
+    margin-left: -28px;
+    margin-bottom: 20px;
+    margin-top: 20px;
   
   }
 
      #discountsIcon{
     height:auto;
-    width:90%;
-    margin-left: -40px;
-      margin-bottom: 20px;
+    width:85%;
+    margin-left: -35px;
+    margin-bottom: 20px;
+     margin-top: 20px;
   
   }
 
@@ -114,8 +120,8 @@ body {
     #logoutIcon{
     height:auto;
     width:50%;
-    margin-left: -25px;
-     margin-top: 48px;
+    margin-left: -19px;
+     margin-top: px;
 
   }
 
@@ -297,6 +303,8 @@ body {
 .inputRounded .MuiOutlinedInput-notchedOutline{
   border-color:#504C64;
 }
+
+
 
 
 
