--- a/public/styles.css
+++ b/public/styles.css
@@ -183,15 +183,15 @@ body {
     
   }
 
-  .orderItemStack{
+  /* .orderItemStack{
       color:#FFFFFF;
     font-size: 20px;
     font-family: 'Barlow Condensed', sans-serif;
     text-align: left;
     margin-top: 10px;
-    margin-left: 25px;
+    margin-left: -5px;
 
-  }
+  } */
     .orderSummaryItemStack{
       color:#FFFFFF;
     font-size: 20px;
@@ -307,14 +307,18 @@ body {
 
 }
 
+
+
 .menuPriceTag{
     color:#FFFFFF;
     font-size: 15px;
     font-family: 'Barlow Condensed', sans-serif;
     margin-top: -22px;
-    margin-left: 26px;
+    margin-left: 30px;
   
 }
+
+
 
 
 .inputRounded .MuiOutlinedInput-root {
