--- a/src/components/modals/ModalWarningMenuStyle.css
+++ b/src/components/modals/ModalWarningMenuStyle.css
@@ -1,4 +1,4 @@
-.modalBackground3 {
+.modalBackgroundWarningMenu {
   width: 100vw;
   height: 100vh;
   /* background-color: rgba(200, 200, 200); */
@@ -8,8 +8,8 @@
   align-items: center;
 }
 
-.modalContainer3 {
-  width: 750px;
+.modalContainerWarningMenu {
+  width: 500px;
   height: 500px;
   border-radius: 12px;
   background-color: #1F1D2B;
@@ -17,30 +17,29 @@
   display: flex;
   flex-direction: column;
   padding: 25px;
-  margin-left: -250px;
-  margin-top: -840px;
-  z-index: 9999;
+  margin-left: 690px;
+  margin-top: -1500px;
 }
 
-.modalContainer3 .title {
+.modalContainerWarningMenu .title {
   display: inline-block;
   text-align: center;
   margin-top: 10px;
 }
 
-.titleCloseBtn3 {
+.titleCloseBtnWarningMenu {
   display: flex;
   justify-content: flex-end;
 }
 
-.titleCloseBtn3 button {
+.titleCloseBtnWarningMenu button {
   background-color: transparent;
   border: none;
   font-size: 25px;
   cursor: pointer;
 }
 
-.modalContainer3 .body {
+.modalContainerWarningMenu .body {
   flex: 50%;
   display: flex;
   justify-content: center;
@@ -49,14 +48,14 @@
   text-align: center;
 }
 
-.modalContainer3 .footer {
+.modalContainerWarningMenu .footer {
   flex: 20%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.modalContainer3 .footer button {
+.modalContainerWarningMenu .footer button {
   width: 150px;
   height: 45px;
   margin: 10px;
@@ -72,6 +71,6 @@
   background-color: crimson;
 } */
 
-#noBtn3 {
+#noBtnWarningMenu {
   background-color: crimson;
 }
