--- a/public/styles.css
+++ b/public/styles.css
@@ -264,10 +264,10 @@ body {
   border-color: "red";
   /* padding: 10px 0 2px 0; */
   /* padding: 10px; */
-  /* margin-bottom: 10px; */
+  /* margin-bottom: -10px; */
   text-align: center;
   margin-top: -68px;
-  margin-left: 439px;
+  margin-left: 500px;
    font-family: 'Barlow Condensed', sans-serif;
 }
 
@@ -357,6 +357,8 @@ body {
 
 
 
+
+
 .paymentinputRounded .MuiOutlinedInput-root {
   border-radius: 13px;
   border-color: 'red';
@@ -372,7 +374,22 @@ body {
 .paymentinputRounded .MuiOutlinedInput-notchedOutline{
   border-color:#504C64;
 }
+.categoryRounded .MuiOutlinedInput-root {
+  border-radius: 13px;
+  color:white;
+  background-color: #252836;
+  font-family: 'Helvetica LT Std'
 
+}
+
+.categoryRounded  .Mui-focused{
+  color:white;
+}
+
+.categoryRounded .MuiOutlinedInput-notchedOutline{
+  border-color:#504C64;
+  border-width: 4px;
+}
 
 
 
